# In-Memoria

./: .gitignore  .npmignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURE_ROADMAP.md  LICENSE  PHASE_1_STATUS.md  README.md  SECURITY.md  TODO.md  funding.json  index.cjs  index.d.ts  index.mjs  package-lock.json  package.json  server.json  test-circuit-breaker-improvements.js  test-honest-error-reporting.js  test_php_concepts.php  tsconfig.json  vitest.config.ts
.code-cartographer/: config.json
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: ai_integration.yml  bug_report.yml  config.yml  feature_request.yml  performance.yml
.github/chatmodes/: inmemoria-explorer.chatmode.md  inmemoria-feature.chatmode.md  inmemoria-review.chatmode.md
.github/workflows/: clippy.yml  php-telemetry.yml  release.yml  tests.yml
.in-memoria/: config.json
.well-known/: funding-manifest-urls
agent-logs/: 2025-11-03T204156-0600-php-minimal-port.md
docs/: DEMO_GUIDE.md  DEMO_SCRIPT.md  DRY_KISS_REFACTORING_PLAN.md  DRY_KISS_REFACTORING_SUMMARY.md  GIF_DEMO.md  GIF_SCRIPT.md  IMPLEMENTATION_PLAN_TEMP.md  IMPLEMENTATION_ROADMAP.md  ISSUE_9_ANALYSIS.md  OPENAI_API_USAGE.md  PHASE_1_IMPLEMENTATION.md  PHASE_1_QUICK_START.md  TESTING.md  TESTING_STRATEGY.md  TOKEN_OVERFLOW_ISSUE.md  TOOL_DESCRIPTION_AUDIT.md  TOOL_RELIABILITY_INVESTIGATION.md  php-core-only-plan.md  release-checklist.md
docs/audits/: PHASE_IMPLEMENTATION_AUDIT.md  REVIEW_SUMMARY.md
docs/benchmarks/: fixtures.md  php.md
docs/ops/: php-monitoring.md
docs/releases/: php-minimal-notes.md  php-pr-draft.md  php-telemetry-summary.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
rust-core/: Cargo.toml  index.d.ts  index.d.ts.map  index.js  index.js.map  package.json
rust-core/src/: ast_parser.rs  lib.rs  pattern_learning.rs  pattern_learning.rs.bak  semantic.rs  semantic.rs.bak
rust-core/src/analysis/: blueprint.rs  complexity.rs  frameworks.rs  mod.rs  relationships.rs  semantic.rs
rust-core/src/extractors/: cpp.rs  csharp.rs  generic.rs  go.rs  java.rs  mod.rs  php.rs  python.rs  rust.rs  sql.rs  svelte.rs  typescript.rs
rust-core/src/parsing/: fallback.rs  manager.rs  mod.rs  tree_walker.rs  utils.rs
rust-core/src/patterns/: implementation.rs  learning.rs  mod.rs  naming.rs  prediction.rs  structural.rs  types.rs
rust-core/src/types/: config.rs  core_types.rs  errors.rs  mod.rs
sandbox-php-sample/src/: AuditLogger.php  UserService.php
scripts/: build-platform-packages.js  capture-performance-status.ts  compare-language-metrics.ts  php-integration-check.ts  run-php-telemetry.ts  test-release-workflow.sh  validate-test-infrastructure.js
src/: index.ts  rust-bindings.ts
src/__tests__/: automation-tools.test.ts  circuit-breaker.test.ts  mcp-integration.test.ts  mcp-server.test.ts  migrations.test.ts  monitoring-tools.test.ts  phase1-services.test.ts  progress-tracker.test.ts  semantic-engine.test.ts  setup.ts  sqlite-db.test.ts  validation.test.ts
src/cli/: debug-tools.ts  interactive-setup.ts
src/config/: config.ts
src/engines/: pattern-engine.ts  semantic-engine.ts
src/mcp-server/: server.ts  (+2 more)
tests/: README.md  phase-integration-test.js  run-all.js  run-comprehensive-tests.js  test-caching-issues.js  test-circuit-breaker-improvements.js  test-codebase-analysis.js  test-complex-parsing.js  test-comprehensive-language-support.js  test-debug.js  test-documentation-generator.js  test-error-reporting.js  test-file-extension-mapping.js  test-full-learning.js  test-lang-detect.js  test-learning-pipeline.js  test-learning-simple.js  test-learning.js  test-local-embeddings.js  test-mcp-resource-cleanup.js  test-simple.js  test-svelte-learning-timeout.js  test-tree-sitter-debug.js  test-vector-db.js
vscode-extension/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  EXTENSION_GUIDE.md  FIXES_AND_IMPROVEMENTS.md  README.md  package.json
(+84 files in other folders)
