[package]
name = "in-memoria-core"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.2", default-features = false, features = ["napi6", "async", "tokio_rt"] }
napi-derive = "3.2"
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1.18", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
regex = "1.11"

[build-dependencies]
napi-build = "2.2"
