[package]
name = "in-memoria-core"
version = "0.5.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["napi-bindings", "all-languages"]
napi-bindings = ["dep:napi", "dep:napi-derive"]

# Language support features - allows selective compilation
all-languages = [
  "javascript", "typescript", "python", "rust-lang", "go", 
  "java", "c", "cpp", "csharp", "sql", "svelte"
]
core-languages = ["javascript", "typescript", "python", "rust-lang"]

# Individual language features
javascript = ["dep:tree-sitter-javascript"]
typescript = ["dep:tree-sitter-typescript"]
python = ["dep:tree-sitter-python"]
rust-lang = ["dep:tree-sitter-rust"]
go = ["dep:tree-sitter-go"]
java = ["dep:tree-sitter-java"]
c = ["dep:tree-sitter-c"]
cpp = ["dep:tree-sitter-cpp"] 
csharp = ["dep:tree-sitter-c-sharp"]
sql = ["dep:tree-sitter-sequel"]
svelte = ["dep:tree-sitter-svelte-ng"]

[dependencies]
napi = { version = "3.4", default-features = false, features = ["napi6", "async", "tokio_rt"], optional = true }
napi-derive = { version = "3.3", optional = true }
tree-sitter = "0.25"
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-sequel = { version = "0.3.8", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-svelte-ng = { version = "1.0.2", optional = true }
streaming-iterator = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1.18", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
regex = "1.11"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
napi-build = "2.2"
